Fix stuck throughput values when device disconnects

When a network device disconnects, the backend previously emitted the `disconnected` signal immediately. This caused the device object to be removed from ksystemstats before the frontend (Plasma System Monitor) or the aggregate sensor could register a zero value. As a result, the "All Network Devices" graph would often flatline at the last measured speed instead of dropping to zero.

This patch fixes the issue by:

1. Explicitly setting all download and upload rate sensors (both bytes and bits) to 0 immediately upon disconnection.
2. Deferring the emission of the `disconnected`  to the next global `update()`  cycle using a pending disconnect flag. This ensures that the frontend has exactly one polling cycle to read the "0" values before the device object is destroyed

BUG: 508516